--- a/cache-api.service
+++ b/cache-api.service
@@ -1,12 +1,16 @@
 [Unit]
-Description=Cache API Service
-After=network.target
+Description=Cache API Service with Redis Caching
+After=network.target redis-server.service
+Wants=redis-server.service
 
 [Service]
 Type=simple
 User=ubuntu
 WorkingDirectory=/home/ubuntu/services/cache-api
 Environment="PATH=/home/ubuntu/services/cache-api/venv/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+Environment="REDIS_HOST=localhost"
+Environment="REDIS_PORT=6379"
+Environment="CACHE_TTL=3600"
 ExecStart=/home/ubuntu/services/cache-api/venv/bin/python main.py
 Restart=always
 RestartSec=10
