Add VPS deployment configuration with Redis setup
- Updated GitHub Actions workflow to install and configure Redis
- Added comprehensive VPS setup guide (VPS_SETUP.md)
- Created automated deployment script (deploy.sh)
- Enhanced README with Redis caching documentation
- Added cache management and monitoring sections
- Included environment configuration examples
- Added troubleshooting and security guidelines

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,31 @@ jobs:
             git fetch origin
             git reset --hard origin/main
 
+            # Install Redis if not already installed
+            if ! command -v redis-server &> /dev/null; then
+              echo "Installing Redis..."
+              sudo apt update
+              sudo apt install redis-server -y
+            fi
+
+            # Configure Redis to start on boot
+            sudo systemctl enable redis-server
+
+            # Check if Redis is running, start if not
+            if ! sudo systemctl is-active --quiet redis-server; then
+              echo "Starting Redis server..."
+              sudo systemctl start redis-server
+            fi
+
+            # Verify Redis is working
+            redis-cli ping || echo "Warning: Redis not responding"
+
+            # Create or update .env file if it doesn't exist
+            if [ ! -f .env ]; then
+              echo "Creating .env file from .env.example..."
+              cp .env.example .env
+            fi
+
             # Activate virtual environment and install/update dependencies
             source venv/bin/activate
             pip install -r requirements.txt --upgrade
@@ -49,12 +74,16 @@ jobs:
             sleep 3
             sudo systemctl status cache-api --no-pager || true
 
+            # Check Redis status
+            echo "=== Redis status ==="
+            sudo systemctl status redis-server --no-pager || true
+
             # Check if port 8001 is listening
             echo "=== Port 8001 status ==="
             sudo netstat -tlnp | grep :8001 || echo "Port 8001 not listening"
 
             # Show recent logs
-            echo "=== System logs ==="
+            echo "=== Cache API logs ==="
             sudo journalctl -u cache-api -n 30 --no-pager || true
 
             echo "✅ Cache API deployment completed successfully"
