Security: Remove hardcoded credentials and VPS IP addresses
- Remove hardcoded API tokens from main.py (now loaded from environment)
- Replace VPS IP address with placeholders in all documentation
- Add rate limiting (60 req/min per IP) for DDoS protection
- Update .env.example with ADMIN_API_TOKEN and RATE_LIMIT_PER_MINUTE
- Add comprehensive SECURITY.md documentation
- Enhance cookie security with secure, httponly, and samesite flags
- Improve token validation logic

Security improvements:
 No hardcoded credentials in code
 Rate limiting to prevent DDoS attacks
 Secure cookie configuration
 Environment-based configuration
 Comprehensive security documentation

--- a/.env.example
+++ b/.env.example
@@ -12,18 +12,20 @@ CACHE_TTL=3600
 API_HOST=0.0.0.0
 API_PORT=8001
 
-# API Authentication Tokens
-# At least one token must be set for the API to work
-# You can configure up to 4 different tokens for different clients/services
+# API Authentication Tokens (REQUIRED FOR SECURITY)
+# Generate secure random tokens - NEVER commit real tokens to Git!
+# Use: python -c "import secrets; print(secrets.token_urlsafe(32))"
 
-# Primary API token (required)
+# Primary API token (for regular API access)
 API_TOKEN=your-secure-token-here
 
-# Additional tokens (optional)
-# API_TOKEN_1=another-token-for-service-1
-# API_TOKEN_2=another-token-for-service-2
-# API_TOKEN_3=another-token-for-service-3
+# Admin API token (for admin endpoints - stats, clear cache, etc.)
+ADMIN_API_TOKEN=your-secure-admin-token-here
 
 # Example with actual tokens (generate strong random tokens in production):
 # API_TOKEN=sk_live_a1b2c3d4e5f6g7h8i9j0
-# API_TOKEN_1=sk_live_x9y8z7w6v5u4t3s2r1q0
+# ADMIN_API_TOKEN=sk_admin_x9y8z7w6v5u4t3s2r1q0
+
+# Rate Limiting (DDoS Protection)
+# Maximum requests per minute per IP address
+RATE_LIMIT_PER_MINUTE=60
